# trai

./: .gitignore  README.md  make.sh  pyproject.toml  requirements.txt
src/components/: tflitemodel.py  tflitemodelselector.py
src/computervision/capturevideo/: capturevideo.py
src/computervision/objectdetection/: objectdetection.py
src/googlegemini/: audia4b.md  chitchat.py  getcontent.py  quicktest.py  temp.html
src/googlegemini/tempdata/: 4_cylinder_direct_injection_2_0l_4v_tfsi_engine_ea_888_generation_iii_bz_-2358.html  7_speed_dual_clutch_transmission_0cj_0ck_0cl-2489.html  a_c_compressor_regulator_valve_n280_removing_and_installing-2460.html  a_c_pressure_switch_f129_-2409.html  a_c_pressure_temperature_sensor-2410.html  a_c_refrigerant_high_pressure_switch_f23_-2408.html  a_c_service_station_connecting-2439.html  a_c_system_and_refrigerant_r134a_safety_precautions-2395.html  a_c_system_general_information-2387.html  a_c_system_operating_after_charging-2424.html  a_c_system_operation-2393.html  a_c_system_repair_information-2418.html  a_c_technology_basic_principles-2389.html  a_pillar_trim_panel_removing_and_installing-2145.html  about_this_owner_s_manual-1817.html  accessories_and_technical_changes-1998.html  active_steering_safety_lock_locking_solenoid_removing_and_installing-2262.html  adapter_for_assembling_flushing_circuit-2432.html  adaptive_cruise_control_acc_-2255.html  additional_safety_precautions_for_airbag_control_module-2092.html  additional_settings-1958.html  adjusting_adaptive_cruise_control-1908.html  (+677 more)
src/whispermodel/: quicktry.py
(+24 files in other folders)
